--- a/es6-gulp-project/package.json
+++ b/es6-gulp-project/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "connect-livereload": "^0.6.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
@@ -27,6 +28,7 @@
     "gulp-sequence": "^0.4.6",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "livereload": "^0.6.2",
     "require-dir": "^0.3.2",
     "vinyl-named": "^1.1.0",
     "webpack": "^3.4.1",
