--- a/es6-gulp-project/package.json
+++ b/es6-gulp-project/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "connect-livereload": "^0.6.0",
