--- a/es6-gulp-project/package.json
+++ b/es6-gulp-project/package.json
@@ -19,6 +19,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "connect-livereload": "^0.6.0",
+    "core-decorators": "^0.20.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
