--- a/es6-gulp-project/package.json
+++ b/es6-gulp-project/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
